# 8-bit-invaders

./: INSTRUCTIONS.md  README.md  completedIssue.txt  issueCompleted.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/a8_bitinvader/: InstrumentedBackgroundTest.java  InstrumentedGameOverTest.java  InstrumentedGameTests.java  InstrumentedLevelOneTest.java  InstrumentedLevelTest.java  InstrumentedMenuTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bullet.h  CMakeLists.txt  Sprite.h  native-lib.cpp
app/src/main/java/com/example/a8_bitinvader/: Background.java  Bullet.java  Enemy.java  GameActivity.java  GameOverActivity.java  Joystick.java  Level.java  LevelOne.java  MainActivity.java  Player.java  PopUpWindow.java  ReverseInterpolator.java  ScoreFileWriter.java  Sprite.java  Writer.java
app/src/main/res/drawable/: orange_border.xml
app/src/main/res/font/: rampage.xml
app/src/main/res/layout/: activity_main.xml  game_finish.xml  popup_table.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/a8_bitinvader/: BulletTest.java  EnemyTest.java  ExampleUnitTest.java  GameActivityTest.java  GameOverActivityTest.java  JoystickTest.java  PlayerTest.java  PopUpWindowTest.java  ReverseInterpolatorTest.java  SpriteTest.java
gradle/wrapper/: gradle-wrapper.properties
